test/modules/migrations/invalid-schema/changelog-precondition-on-fail-continue.js
import * as generic from '../templates/generic-changeset';

export default({
  changelog: {
    preConditions: [generic.preconditionFailAndContinueFunc],
    changesets: generic.changesets('AMPOFFLINE-1307')
  }
});
